--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Connect with Me</h2>
         <a href="https://github.com/RobinSalander">
           <img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="www.linkedin.com/in/naomi-gibson-72bb2b157">
+        <a href="https://www.linkedin.com/in/naomi-gibson-72bb2b157">
           <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/9249679/naomi-gibson?tab=profile">
           <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
